html ,css 스타일 입력

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
   <h1>Vanilla Javascript with redux</h1>
+
+  <div class="toggle"></div>
+  <hr>
+  <h2 id="counter">0</h2>
+  <button id="increaseBtn">Increase +1</button>
+  <button id="decreaseBtn">Decrease -1</button>
   <script src="./index.js"></script>
 
 </body>
